All that's left is styling!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebApp</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="text/javascript" src="app.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
@@ -19,7 +18,7 @@
         </svg>
         <img class="user" src="images/member-1.jpg" alt="a photo of the user">
 
-        <h2 class="username">Ronald Greer</h2>
+        <h2 class="username">Ronald</h2>
       </div>
     </header>
 
@@ -268,6 +267,7 @@
 
 
 
+    <script type="text/javascript" src="app.js"></script>
     </body>
 
 </html>
