--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div class="traffic">
           <h3>Traffic</h3>
           <ul>
-            <li>Hourly</li>
-            <li>Daily</li>
-            <li>Weekly</li>
-            <li>Monthly</li>
+            <li class="dalist" id="selected">Hourly</li>
+            <li class="dalist">Daily</li>
+            <li class="dalist">Weekly</li>
+            <li class="dalist">Monthly</li>
           </ul>
         </div>
         <div class="widget-container-full">
@@ -105,6 +105,8 @@
         </div>
      </section>
 
+     <hr>
+
 
      <section class="daily">
        <h3>Daily Traffic</h3>
@@ -115,6 +117,7 @@
        </div>
      </section>
 
+     <hr>
      
      <section class="mobile">
        <h3>Mobile Users</h3>
@@ -125,9 +128,11 @@
        </div>
      </section>
 
+     <hr>
 
       <!--Section container?-->
      <div class="social-container">
+       <h3>Social Stats</h3>
        <div class="social-image">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path d="M23.998 12c0-6.628-5.372-12-11.999-12C5.372 0 0 5.372 0 12c0 5.988 4.388 10.952 10.124 11.852v-8.384H7.078v-3.469h3.046V9.356c0-3.008 1.792-4.669 4.532-4.669 1.313 0 2.686.234 2.686.234v2.953H15.83c-1.49 0-1.955.925-1.955 1.874V12h3.328l-.532 3.469h-2.796v8.384c5.736-.9 10.124-5.864 10.124-11.853z"/>
