--- a/index.html
+++ b/index.html
@@ -277,6 +277,20 @@
     <section class="settings">
       <h3>Settings</h3>
 
+      <label class="switch-light switch-candy" onclick="">
+        <input type="checkbox">
+      
+        <strong>
+          Wireless
+        </strong>
+      
+        <span>
+          <span>Off</span>
+          <span>On</span>
+          <a></a>
+        </span>
+      </label>
+
       <select class="form-field" id="timezone">
         <option disabled selected>Select a Timezone</option>
         <option>Eastern</option>
