--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WebApp</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet"  href="css/toggle-switch.css" />
+    <link rel="stylesheet"  href="css/toggle-switch.css.map" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
