--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
   </head>
    <!----->
- <!--if issue-->
+   <body>
     <header>
       <div class="fence">
        <h1 class="webhead">WebApp&trade;</h1>
@@ -49,7 +49,6 @@
 
     </nav>
 
-<body class="gridx">
 <main>
       <div class="main-header">
         <h2 class="headline">Dashboard</h2>
@@ -175,7 +174,7 @@
 
      <hr>
 
-     <section class="membas">
+     <section class="members">
        <h3>New Members</h3>
 
        <div class="members-container">
@@ -328,8 +327,8 @@
 
 
     <script type="text/javascript" src="app.js"></script>
+   </div>
   </main>
-    </body>
-  </div>
+</body>
 
 </html>
