--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           </canvas>
         </div>
      </section>
+     <hr class="hr">
 
-     <hr>
 
 
      <section class="daily">
@@ -118,7 +118,6 @@
        </div>
      </section>
 
-     <hr>
      
      <section class="mobile">
        <h3>Mobile Users</h3>
@@ -128,8 +127,8 @@
         <canvas id="mobile-chart"></canvas>
        </div>
      </section>
+     <hr class="hr">
 
-     <hr>
 
       <!--Section container?-->
     <section class="networking">
@@ -171,8 +170,9 @@
      </div>
     </div>
     </section>
+    <hr class="hr">
 
-     <hr>
+
 
      <section class="members">
        <h3>New Members</h3>
@@ -186,7 +186,6 @@
          <p>10/15/20</p>
        </div>
 
-       <hr class="socialhr">
 
        <div class="members-container">
         <img class="vic" src="images/member-2.jpg">
@@ -197,7 +196,6 @@
         <p>10/15/20</p>
       </div>
 
-      <hr class="socialhr">
 
       <div class="members-container">
         <img class="vic" src="images/member-3.jpg">
@@ -208,7 +206,6 @@
         <p>10/15/20</p>
       </div>
 
-      <hr class="socialhr">
 
       <div class="members-container">
         <img class="vic" src="images/member-4.jpg">
@@ -219,7 +216,6 @@
         <p>10/15/20</p>
       </div>
 
-      <hr>
 
      </section>
 
@@ -235,7 +231,6 @@
         </div>
       </div>
 
-      <hr class="socialhr">
 
       <div class="members-container">
        <img class="vic" src="images/member-2.jpg">
@@ -245,7 +240,6 @@
        </div>
      </div>
 
-     <hr class="socialhr">
 
      <div class="members-container">
        <img class="vic" src="images/member-3.jpg">
@@ -255,7 +249,6 @@
        </div>
      </div>
 
-     <hr class="socialhr">
 
      <div class="members-container">
        <img class="vic" src="images/member-4.jpg">
@@ -265,7 +258,6 @@
        </div>
      </div>
 
-     <hr>
 
     </section>
 
@@ -279,7 +271,6 @@
       </form>
     </section>
 
-    <hr>
 
     <section class="settings">
       <h3>Settings</h3>
