--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
      
      <section class="mobile">
-       <h3>Mobile Users</h3>
+       <h3 class="mobilehead">Mobile Users</h3>
 
        <div class="widget-container-half">
 
@@ -132,6 +132,7 @@
 
       <!--Section container?-->
     <section class="networking">
+      <div class="scell">
      <div class="social-container">
        <h3>Social Stats</h3>
        <div class="facebook">
@@ -146,6 +147,8 @@
          <p class="snumber">10,320</p>
        </div>
       </div>
+      </div>
+      <div class="scell">
       <div class="instagram">
        <div class="social-imagei">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -157,6 +160,8 @@
         <p class="snumber">15,849</p>
       </div>
     </div>
+    </div>
+    <div class="scell">
     <div class="twitter">
       <div class="social-imaget">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -167,6 +172,7 @@
         <p class="smname">Twitter</p>
         <p class="snumber">22,146</p>
       </div>
+     </div>
      </div>
     </div>
     </section>
