--- a/index.html
+++ b/index.html
@@ -186,40 +186,44 @@
          <img class="vic" src="images/member-1.jpg">
          <div class="members-text">
            <p>Victoria Chambers</p>
-           <a href="#">victoria.chambers80@example.com</a>
+           <a class="email" href="#">victoria.chambers80@example.com</a>
          </div>
-         <p>10/15/20</p>
+         <p class="joined">10/15/20</p>
        </div>
+       <hr class="memhr">
 
 
        <div class="members-container">
         <img class="vic" src="images/member-2.jpg">
         <div class="members-text">
           <p>Dale Byrd</p>
-          <a href="#">dale.Byrd52@example.com</a>
+          <a class="email" href="#">dale.Byrd52@example.com</a>
         </div>
-        <p>10/15/20</p>
+        <p id="dalej">10/15/20</p>
       </div>
+      <hr class="memhr">
 
 
       <div class="members-container">
         <img class="vic" src="images/member-3.jpg">
         <div class="members-text">
           <p>Dawn Wood</p>
-          <a href="#">dawn.wood16@example.com</a>
+          <a class="email" href="#">dawn.wood16@example.com</a>
         </div>
-        <p>10/15/20</p>
+        <p id="dawnj">10/15/20</p>
       </div>
+      <hr class="memhr">
 
 
       <div class="members-container">
         <img class="vic" src="images/member-4.jpg">
         <div class="members-text">
           <p>Dan Oliver</p>
-          <a href="#">dan.oliver82@example.com</a>
+          <a class="email" href="#">dan.oliver82@example.com</a>
         </div>
-        <p>10/15/20</p>
+        <p id="danj">10/15/20</p>
       </div>
+      <hr class="memhr">
 
 
      </section>
@@ -235,6 +239,7 @@
           <p>4 hours ago</p>
         </div>
       </div>
+      <hr class="memhr">
 
 
       <div class="members-container">
@@ -244,6 +249,7 @@
          <p>5 hours ago</p>
        </div>
      </div>
+     <hr class="memhr">
 
 
      <div class="members-container">
@@ -253,6 +259,7 @@
          <p>5 hours ago</p>
        </div>
      </div>
+     <hr class="memhr">
 
 
      <div class="members-container">
@@ -262,6 +269,7 @@
          <p>1 day ago</p>
        </div>
      </div>
+     <hr class="dans">
 
 
     </section>
