--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="alert" id="alert" ></div>
 
       <section class="traffic">
-        <div class="traffic">
+        <div class="traffictwo">
           <h3>Traffic</h3>
           <ul>
             <li class="dalist" id="selected">Hourly</li>
@@ -269,7 +269,7 @@
          <p>1 day ago</p>
        </div>
      </div>
-     <hr class="dans">
+     <hr class="memhr">
 
 
     </section>
@@ -286,7 +286,7 @@
 
 
     <section class="settings">
-      <h3>Settings</h3>
+      <h3 class="settinghead">Settings</h3>
 
       <p>Send Email Notifications </p>
       <label class="switch-light switch-ios" onclick="">
@@ -331,6 +331,7 @@
 
 
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
    </div>
   </main>
 </body>
